fixed some comments in code

--- a/Personalized_PageRank_Tutorial.ipynb
+++ b/Personalized_PageRank_Tutorial.ipynb
@@ -139,8 +139,7 @@
     "# Our setting: \n",
     "# Assume that user 1 is only interested in (so has nonzero probability in the personalization vector) the first 20000 webpages, \n",
     "# user 2 only in the next 20000 pages, user 3 only in the next 20000, and user 4 only in the last 20000. \n",
-    "# Each user is uniformly interested in the corresponding 20000 pages, so each nonzero entry of the personalization vector \n",
-    "# is 1/20000. Moreover, each webpage has out-links to 10 other randomly chosen pages, each with transition probability 0.1\n",
+    "# Moreover, each webpage has out-links to 10 other randomly chosen pages, each with transition probability 0.1\n",
     "# so that the row sums to 1. \n",
     "\n",
     "# The following code chunks contain the code and detailed comments on running the personalized PageRank algorithm \n",
@@ -563,7 +562,7 @@
    "source": [
     "######## Personalized PageRank Algorithm with larger value of b (more personalization incorporated) ##########\n",
     "\n",
-    "# Decide values of a,b,c. For this tutorial, let's use a = 0.1, b = 0.9, c = 0.1.\n",
+    "# Decide values of a,b,c. For this tutorial, let's use a = 0.05, b = 0.9, c = 0.05.\n",
     "a = 0.05\n",
     "b = 0.9\n",
     "c = 0.05\n",
