fixed some LaTeX expressions

--- a/Personalized_PageRank_Tutorial.ipynb
+++ b/Personalized_PageRank_Tutorial.ipynb
@@ -36,7 +36,7 @@
     "\n",
     "Intuitively, $P_{ij}$ is the transition probability of moving from webpage $i$ to webpage $j$. \n",
     "\n",
-    "Then the regular PageRank algorithm is: initializing an $n \\times 1$ vector $\\vec{x}$ that sums to $1$, and then iteratively updating $\\vec{x}$ until convergence using this update formula: $ \\vec{x} \\leftarrow \\Big( (1-d) P + d \\begin{bmatrix} 1/n & \\cdots & 1/n \\\\ \\vdots & \\ddots & \\vdots \\\\ 1/n & \\cdots & 1/n \\end{bmatrix} \\Big) \\vec{x} $\n",
+    "Then the regular PageRank algorithm is: initializing an $n \\times 1$ vector $\\vec{x}$ that sums to $1$, and then iteratively updating $\\vec{x}$ until convergence using this update formula: $$ \\vec{x} \\leftarrow \\Big( (1-d) P + d \\begin{bmatrix} 1/n & \\cdots & 1/n \\\\ \\vdots & \\ddots & \\vdots \\\\ 1/n & \\cdots & 1/n \\end{bmatrix} \\Big) \\vec{x} $$\n",
     "\n",
     "where the pre-specified $d \\ne 0$ is the probability of the internet user moving to a random webpage (chooses uniformly among the $n$ webpages) instead of following the transition probabilities in $P$. Here the matrix $P$ is called the \"transition matrix\", and the other matrix of all $\\frac{1}{n}$'s is called the \"teleportation matrix\"."
    ]
@@ -50,7 +50,7 @@
     "Here are some important additional notes about regular PageRank that weren't covered in the lecture slides:\n",
     "- The value $1-d$, which is the probability that the internet user will take the next move according to the transition probabilities, is called the \"damping factor\". Google's PageRank algorithm uses damping factor of $0.85$ (i.e. uses $d=0.15$).\n",
     "- We initialize $\\vec{x}$ to sum to $1$, each row of $P$ sums to $1$, and each row of the teleportation matrix sums to $1$. So according to our update rule, $\\vec{x}$ always sums to $1$.\n",
-    "- Since $\\vec{x}$ always sums to $1$, our update rule can be rewritten as: $ \\vec{x} \\leftarrow (1-d) P \\vec{x} + d \\begin{bmatrix} 1/n \\\\ \\vdots \\\\ 1/n \\end{bmatrix}$\n",
+    "- Since $\\vec{x}$ always sums to $1$, our update rule can be rewritten as: $$ \\vec{x} \\leftarrow (1-d) P \\vec{x} + d \\begin{bmatrix} 1/n \\\\ \\vdots \\\\ 1/n \\end{bmatrix}$$\n",
     "\n",
     "Lastly, let's discuss why the PageRank vector $\\vec{x}$ will converge to a unique vector. The notions of Markov chains are important here.\n",
     "\n",
@@ -84,16 +84,16 @@
     "- But the teleportation matrix is now personalized. That is: each internet user has his/her own teleportation matrix. The personalized teleportation matrix for user $u$ is:\n",
     "$\\begin{bmatrix} p_{1}^{(u)} & p_{2}^{(u)} & \\cdots & p_{n}^{(u)} \\\\ p_{1}^{(u)} & p_{2}^{(u)} & \\cdots & p_{n}^{(u)} \\\\ \\vdots & \\vdots & \\ddots & \\vdots \\\\ p_{1}^{(u)} & p_{2}^{(u)} & \\cdots & p_{n}^{(u)} \\end{bmatrix}$, where $\\begin{bmatrix} p_{1}^{(u)} & p_{2}^{(u)} & \\cdots & p_{n}^{(u)} \\end{bmatrix}$, denoted by $p^{(u)}$, is the (pre-specified) probabilistic distribution of visiting each of the $n$ webpages for that particular user (incorporates the user's interest and preference across the webpages) and is called \"personalization vector\".\n",
     "- So the update formula in the personalized PageRank for user $u$ is:\n",
-    "$ \\vec{x} \\leftarrow \\Big( (1-d) P + d \\begin{bmatrix} p_{1}^{(u)} & p_{2}^{(u)} & \\cdots & p_{n}^{(u)} \\\\ p_{1}^{(u)} & p_{2}^{(u)} & \\cdots & p_{n}^{(u)} \\\\ \\vdots & \\vdots & \\ddots & \\vdots \\\\ p_{1}^{(u)} & p_{2}^{(u)} & \\cdots & p_{n}^{(u)} \\end{bmatrix} \\Big) \\vec{x} $\n",
+    "$$ \\vec{x} \\leftarrow \\Big( (1-d) P + d \\begin{bmatrix} p_{1}^{(u)} & p_{2}^{(u)} & \\cdots & p_{n}^{(u)} \\\\ p_{1}^{(u)} & p_{2}^{(u)} & \\cdots & p_{n}^{(u)} \\\\ \\vdots & \\vdots & \\ddots & \\vdots \\\\ p_{1}^{(u)} & p_{2}^{(u)} & \\cdots & p_{n}^{(u)} \\end{bmatrix} \\Big) \\vec{x} $$\n",
     "\n",
     "But will this algorithm converge to a unique vector? That is: does this Markov chain have a unique stationary distribution? Recall that in regular PageRank, what made the Markov chain aperiodic is every digaonal entry in the teleportation matrix being nonzero (so every webpage has a self loop), and what made the chain irreducible is every entry in the teleportation matrix being nonzero (so every pair of nodes is connected). In personalization context, most of the entries in a real-world personalization vector are $0$, considering the huge number of webpages and the fact that a user tends to be interested in only a small subset of those millions of webpages. So the personalized teleporation matrix would contain many $0$'s, and so aperiodicity and irreducibility are not guaranteed. We need a remedy.\n",
     "\n",
     "One way of ensuring aperiodicity and irreducibility is to add the matrix of all $\\frac{1}{n}$'s in our update rule, so that every webpage has a self loop with nonzero probability and also every pair of webpages is connected. That is: change the update rule to:\n",
-    "$ \\vec{x} \\leftarrow \\Big( a P + b \\begin{bmatrix} p_{1}^{(u)} & p_{2}^{(u)} & \\cdots & p_{n}^{(u)} \\\\ p_{1}^{(u)} & p_{2}^{(u)} & \\cdots & p_{n}^{(u)} \\\\ \\vdots & \\vdots & \\ddots & \\vdots \\\\ p_{1}^{(u)} & p_{2}^{(u)} & \\cdots & p_{n}^{(u)} \\end{bmatrix} + c \\begin{bmatrix} 1/n & 1/n & \\cdots & 1/n \\\\ 1/n & 1/n & \\cdots & 1/n \\\\ \\vdots & \\vdots & \\ddots & \\vdots \\\\ 1/n & 1/n & \\cdots & 1/n \\end{bmatrix} \\Big) \\vec{x}$\n",
+    "$$ \\vec{x} \\leftarrow \\Big( a P + b \\begin{bmatrix} p_{1}^{(u)} & p_{2}^{(u)} & \\cdots & p_{n}^{(u)} \\\\ p_{1}^{(u)} & p_{2}^{(u)} & \\cdots & p_{n}^{(u)} \\\\ \\vdots & \\vdots & \\ddots & \\vdots \\\\ p_{1}^{(u)} & p_{2}^{(u)} & \\cdots & p_{n}^{(u)} \\end{bmatrix} + c \\begin{bmatrix} 1/n & \\cdots & 1/n \\\\ \\vdots & \\ddots & \\vdots \\\\ 1/n & \\cdots & 1/n \\end{bmatrix} \\Big) \\vec{x}$$\n",
     "\n",
     "or equivalently (since $\\vec{x}$ sums to $1$),\n",
     "\n",
-    "$ \\vec{x} \\leftarrow a P \\vec{x} + b \\begin{bmatrix} p^{(u)} \\vec{x} \\\\ p^{(u)} \\vec{x} \\\\ \\vdots \\\\ p^{(u)} \\vec{x} \\end{bmatrix} + c \\begin{bmatrix} 1/n \\\\ \\vdots \\\\ 1/n \\end{bmatrix}$\n",
+    "$$ \\vec{x} \\leftarrow a P \\vec{x} + b \\begin{bmatrix} p^{(u)} \\vec{x} \\\\ p^{(u)} \\vec{x} \\\\ \\vdots \\\\ p^{(u)} \\vec{x} \\end{bmatrix} + c \\begin{bmatrix} 1/n \\\\ \\vdots \\\\ 1/n \\end{bmatrix}$$\n",
     "\n",
     "where our choice of $a$, $b$, and $c$ must satisfy $a + b + c=1$ so that $\\vec{x}$ always sums to $1$, and also $c \\ne 0$ so that aperiodicity and irreducibility are guaranteed. In this form, we don't actually need to store the $n \\times n$ personalized teleportation matrix, but just store the $1 \\times n$ personalization vector. This is also an action of dealing with sparsity issue because it uses much less memory compared to storing the $n \\times n$ matrix.\n",
     "\n",
